[project]
name = "tradesignals-pipeline"
version = "1.0.0"
description = "Tradesignals streaming and batch data processing pipelines."
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "cachetools>=5.5.0",
    "pandas>=2.2.3",
    "polygon-api-client>=1.14.2",
    "python-dotenv>=1.0.1",
    "quixplus>=0.1.3",
    "quixstreams>=3.1.0",
    "unusualwhales-python>=0.1.0a5",
    "websocket-client>=1.8.0",
]

[tool.uv.workspace]
members = [
    "option_trades",
    "option_trade_aggs",
    "equity_quotes",
    "market_dashboard",
]

[tool.uv]
package = true
link-mode = "copy"
compile-bytecode = true
python-downloads = "automatic"
python-preference = "only-managed"
resolution = "highest"
upgrade = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "option_trades",
    "option_trade_aggs",
    "equity_quotes",
    "market_dashboard",
]
