[project]
name = "option_trades"
version = "0.1.0"
description = "Option trades producer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "quixstreams>=3.1.0",
    "websockets>=13.1",
]

[tool.uv.sources]
# tradesignals = { workspace = true }
ts_lib = { workspace = true }

[tool.uv.workspace]
members = ["option_trades/*", "ts_lib/*"]
